@startuml

package "models" <<Node>> {
    entity users {
        * id: int <<generated>>
        --
        * name: varchar(18)
        * email: varchar(255)
        * password: varchar(255)
        * description: text
        avatar: varchar(255)
        created_at: DateTime
        updated_at: DateTime
    }

    entity reviews {
        * id: int <<generated>>
        --
        * user_id: <<FK>>
        * move_id: varchar(255)
        * title: varchar(255)
        * text: text
        * movie_title
        * movie_poster
        created_at: DateTime
        updated_at: DateTime
    }

    entity favorites {
        * id: int <<generated>>
        --
        * user_id: <<FK>>
        * move_id: int
        * movie_title
        * movie_poster
        created_at: DateTime
        updated_at: DateTime
    }

    entity recommendations {
        * id: int <<generated>>
        --
        * user_id: <<FK>>
        * move_id: int
        * movie_title
        * movie_poster
        created_at: DateTime
        updated_at: DateTime
    }

    entity watchlists {
        * id: int <<generated>>
        --
        * user_id: <<FK>>
        * move_id: int
        * movie_title
        * movie_poster
        created_at: DateTime
        updated_at: DateTime
    }

    entity ratings {
        * id: int <<generated>>
        --
        * user_id: <<FK>>
        * move_id: int
        * rating: int
        * movie_title
        * movie_poster
        created_at: DateTime
        updated_at: DateTime
    }
}

users ||--o{ ratings
users ||--o{ reviews
users ||--o{ favorites
users ||--o{ watchlists
users ||--o{ recommendations

@enduml
